--- a/1st lesson.html
+++ b/1st lesson.html
@@ -58,6 +58,7 @@ border: 5px solid black;
 </head>  
 <body>  
 <h1> Calculator Program in JavaScript </h1>  
+<h2>First program</h2>
 <div class= "formstyle">  
 <form name = "form1">  
       
