--- a/1st lesson.html
+++ b/1st lesson.html
@@ -3,57 +3,7 @@
 <head>  
 <title> JavaScript Calculator </title>  
   
-<style>  
-h1 {  
-    text-align: center;  
-    padding: 23px;  
-    background-color: skyblue;  
-    color: white;  
-    }  
-  
-#clear{  
-width: 270px;  
-border: 3px solid black;  
-    border-radius: 3px;  
-    padding: 20px;  
-    background-color: red;  
-}  
-  
-.formstyle  
-{  
-width: 300px;  
-height: 530px;  
-margin: auto;  
-border: 3px solid black;  
-border-radius: 5px;  
-padding: 20px;  
-background-color: cornflowerblue;
-}  
-  
-  
-  
-input  
-{  
-width: 20px;  
-background-color: skyblue;  
-color: black;  
-border: 3px solid black;  
-    border-radius: 5px;  
-    padding: 26px;  
-    margin: 5px;  
-    font-size: 16px;  
-}  
-  
-  
-#calc{  
-width: 250px;  
-border: 5px solid black;  
-    border-radius: 3px;  
-    padding: 20px;  
-    margin: auto;  
-}  
-  
-</style>  
+<link rel="stylesheet" href="1st lesson.css"> 
   
 </head>  
 <body>  
